# metronome-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-release.yml
src/: analysis.rs  audio.rs  cli.rs  config.rs  constants.rs  helpers.rs  main.rs  metronome.rs  recording.rs  scheduler.rs  synth.rs  terminal.rs
src/synth/: hihat.rs  mod.rs  piano.rs  poly_synth.rs
