[package]
name = "metronome-cli"
version = "0.4.0"
edition = "2021"
authors = ["Evan Douglass <evandouglass@eldss.dev>"]
license = "Apache-2.0"
description = "A command-line metronome designed to enhance your internal timing and harmonic intuition with features like beat muting, BPM ramping, drone tones, and chords."
readme = "README.md"
repository = "https://github.com/eldss/metronome-cli/"
keywords = ["metronome", "cli", "music", "tempo", "practice"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "metronome"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
cpal = "0.15.3"
fundsp = "0.20.0"
rand = "0.9.0"
regex = "1.11.1"
rstest = "0.24.0"
